--- a/assets/style/rosatheme.css
+++ b/assets/style/rosatheme.css
@@ -128,6 +128,8 @@ h5 {
 .portfolio-item-details .submenu span {
 	font-size: 14px;
 	color: #222;
-	background-color: none;
+	font-weight: normal;
+	background-color: #f1f1f1;
+	text-transform: none;
 }
 
