--- a/assets/style/rosatheme.css
+++ b/assets/style/rosatheme.css
@@ -139,10 +139,12 @@ h5 {
 	color: #222;
 }
 .portfolio-item-details .website a:hover {
+	color: #ff6600;
 	opacity: 0.7;
+	text-decoration: none;
 }
 .portfolio-item-details .submenu span {
-	font-size: 14px;
+	font-size: 12px;
 	color: #222;
 	font-weight: normal;
 	background-color: #f1f1f1;
