--- a/assets/style/rosatheme.css
+++ b/assets/style/rosatheme.css
@@ -156,6 +156,9 @@ h5 {
 .portfolio-item-details .website p {
 	font-size: 14px;
 }
+.portfolio-item-details .website .wasel {
+	color: #222;
+}
 .portfolio-item-details .website a:hover {
 	color: #ff6600;
 	opacity: 0.7;
