--- a/assets/style/rosatheme.css
+++ b/assets/style/rosatheme.css
@@ -42,7 +42,12 @@ h4 {
 }
 /*Service*/
 .page-features {
-	background: url(../images/pages/features/services_bg.jpg) 50% 0 no-repeat fixed;
+  position: relative;
+  background: url(../images/pages/features/services_bg.jpg) 50% 0 no-repeat fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .carousel-inner .testimonial {
 	font-size: 16px;
@@ -64,6 +69,19 @@ h4 {
 	font-size: 0.9em;
 	line-height: 3;
 }
+.resume {
+	font-size: 0.8em;
+}
+.rosa-resume .cutBy10 {
+	margin: 10%;
+	font-size: 0.75em;
+}
+.rosa-resume img,
+.visual-services .row-fluid .span4 img {
+	width: 45%;
+}
+
+
 
 /*Portfolio*/
 .portfolio-item-details .website a {
