--- a/assets/style/rosatheme.css
+++ b/assets/style/rosatheme.css
@@ -81,7 +81,121 @@ h4 {
 	width: 45%;
 }
 
-
+/*ONLINE RESUME*/
+#rosa-bg {
+      background: url(../../assets/images/pages/blog/rosa-ggbridge-normal.jpg) top no-repeat;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+}
+#rosa-bg .name-rosa {
+	z-index: 5;
+	color: #ffffff;
+	font-size: 2em;
+	margin-top: 1.5em;
+	font-weight: 300;
+}
+#rosa-bg .resume-header ul li {
+	text-align: left;
+	padding-left: 26px;
+}
+#rosa-bg .rosa-title {
+	font-weight: 300;
+	font-style: italic;
+	font-size: 16px;
+}
+#rosa-bg .rosa-portfolio {
+	margin-top: 1.5em;
+	color: #ffffff;
+	font-size: 16px;
+	font-weight: 300;
+	font-style: italic;
+}
+#rosa-bg .portfolio-links {
+	font-weight: 300;
+	text-transform: none;
+	font-size: 14px;
+	display: block;
+	line-height: 2;
+}
+#rosa-bg .portfolio-links:hover {
+	text-decoration: none;
+}
+#rosa-bg .span6,
+#rosa-bg .span4  {
+	padding: 0 0.9em;
+}
+#rosa-bg .span6.highlights {
+	padding-top: 3em;
+	padding-left: 25px;
+}
+#rosa-bg .i-am,
+#rosa-bg .slogan {
+	color: #FFFFFF;
+}
+#rosa-bg .i-am {
+	font-size: 12px;
+}
+#rosa-bg .knowledge-list,
+#rosa-bg .other-skills {
+	font-size: 14px;
+	color: #FFFFFF;
+}
+#rosa-bg .other-skills {
+	padding-bottom: 1.3em;
+}
+#rosa-bg .slogan {
+	font-style: italic;
+}
+#rosa-bg .summary {
+	color: #BBB;
+	font-size: 14px;
+	font-weight: 400;
+}
+#rosa-bg .schools li {
+	list-style: none;
+}
+#rosa-bg .edu .schools li .degree {
+	color: #FFFFFF;
+	font-size: 14px;
+	padding-left: 0;
+	margin-bottom: 0;
+}
+#rosa-bg .edu .dots li {
+	padding: 10px 0;
+	margin-bottom: 0;
+	list-style: none;
+}
+.icon-record {
+	font-size: 1em;
+	vertical-align: middle;
+	padding: 0 2px;
+	color: rgba(0,0,0, 0.5);
+}
+.icon-record.white {
+	color: #FFFFFF;
+}
+#rosa-bg .dates0,
+#rosa-bg .dates1,
+#rosa-bg .dates2,
+#rosa-bg .dates3 {
+	font-size: 10px;
+	color: #BBB;
+}
+#rosa-bg .dates {
+	list-style: none;
+	text-align: left;
+	padding-top: 1.2em;
+}
+#rosa-bg em {
+	font-size: 14px;
+	color: #FFFFFF;
+}
+#rosa-bg strong  {
+	font-size: 12px;
+	color: #FFFFFF;
+}
 
 /*Portfolio*/
 .portfolio-item-details .website a {
